--- a/package.toml
+++ b/package.toml
@@ -5,7 +5,7 @@ platforms = ["Server", "Client"]
 
 priority = 20
 provides = ["dummy_tester"]
-os_support = ["debian-10", "debian-11", "ubuntu-20.04", "ubuntu-22.04"]
+# os_support = []
 
 [recommend]
 on_level = "Project" # *Proxy | Group | Project
