package upgrade from git repo with a script instead

--- a/cli.toml
+++ b/cli.toml
@@ -9,13 +9,13 @@ executor = "tests/run"
 
 [command.test_bash.args.key]
 help = "Set dummy 'key' for command"
-index = 1
+arg_index = 1
 value_is = "String" # Boolean | String | Array
 required = true
 
 [command.test_bash.args.val]
 help = "Set dummy 'value' for command"
-index = 2
+arg_index = 2
 value_is = "String" # Boolean | String | Array
 required = true
 
