--- a/cli.toml
+++ b/cli.toml
@@ -34,13 +34,17 @@ help = "Test lua executor"
 platform = ["Client"]
 executor = "tests/run"
 
-[command.test_lua.args.flag]
-help = "Set dummy boolean flag for command"
-long = "flag"
-short = "f"
-value_is = "Boolean" # Boolean | String | Array
-to_env_key = "TESTER_LUA_FLAG"
-required = false
+[command.test_lua.args.key]
+help = "Set dummy 'key' for command"
+arg_index = 1
+value_is = "String" # Boolean | String | Array
+required = true
+
+[command.test_lua.args.val]
+help = "Set dummy 'value' for command"
+arg_index = 2
+value_is = "String" # Boolean | String | Array
+required = true
 
 ########################################################
 
@@ -48,6 +52,18 @@ required = false
 help = "Test perl executor"
 platform = ["Client"]
 executor = "tests/run"
+
+[command.test_perl.args.key]
+help = "Set dummy 'key' for command"
+arg_index = 1
+value_is = "String" # Boolean | String | Array
+required = true
+
+[command.test_perl.args.val]
+help = "Set dummy 'value' for command"
+arg_index = 2
+value_is = "String" # Boolean | String | Array
+required = true
 
 [command.test_perl.args.flag]
 help = "Set dummy boolean flag for command"
@@ -64,6 +80,18 @@ help = "Test python executor"
 platform = ["Client"]
 executor = "tests/run"
 
+[command.test_python.args.key]
+help = "Set dummy 'key' for command"
+arg_index = 1
+value_is = "String" # Boolean | String | Array
+required = true
+
+[command.test_python.args.val]
+help = "Set dummy 'value' for command"
+arg_index = 2
+value_is = "String" # Boolean | String | Array
+required = true
+
 [command.test_python.args.flag]
 help = "Set dummy boolean flag for command"
 long = "flag"
@@ -78,6 +106,18 @@ required = false
 help = "Test sh executor"
 platform = ["Client"]
 executor = "tests/run"
+
+[command.test_sh.args.key]
+help = "Set dummy 'key' for command"
+arg_index = 1
+value_is = "String" # Boolean | String | Array
+required = true
+
+[command.test_sh.args.val]
+help = "Set dummy 'value' for command"
+arg_index = 2
+value_is = "String" # Boolean | String | Array
+required = true
 
 [command.test_sh.args.flag]
 help = "Set dummy boolean flag for command"
