--- a/dependency.toml
+++ b/dependency.toml
@@ -1,30 +1,24 @@
-# optional: bool,
-# optional_with: Option<Vec<String>>,
-# version: Option<VersionReq>,
-# on_level: DepOnLevel,
-# collection: PackageType,
-
 [dependency.bash]
 optional = false
-on_level = "Node" # Node | Cluster | Project | Client
+scope = "Node" # Node | Cluster | Project | Client
 collection = "Executor"
 
 [dependency.lua]
 optional = false
-on_level = "Node" # Node | Cluster | Project | Client
+scope = "Node" # Node | Cluster | Project | Client
 collection = "Executor"
 
 [dependency.perl]
 optional = false
-on_level = "Node" # Node | Cluster | Project | Client
+scope = "Node" # Node | Cluster | Project | Client
 collection = "Executor"
 
 [dependency.python]
 optional = false
-on_level = "Node" # Node | Cluster | Project | Client
+scope = "Node" # Node | Cluster | Project | Client
 collection = "Executor"
 
 [dependency.sh]
 optional = false
-on_level = "Node" # Node | Cluster | Project | Client
+scope = "Node" # Node | Cluster | Project | Client
 collection = "Executor"
